@@ -5,6 +5,7 @@ v0.5.3 (xx xxx 2009)
 ====================
  * Added support for another epguides formatting style (used eg. for "Eureka")
  * Added option to suppress colors in console output
+ * Fixed some minor issues in the epguides parser
  * Improved compatibility with older python versions
 
 
